# ChangeLog for sys-apps/man-pages
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.102 2008/01/14 11:40:24 vapier Exp $

*man-pages-2.76 (14 Jan 2008)

  14 Jan 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.76.ebuild:
  Version bump.

*man-pages-2.75 (10 Jan 2008)

  10 Jan 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.75.ebuild:
  Version bump.

  08 Dec 2007; Mike Frysinger <vapier@gentoo.org> man-pages-2.69.ebuild,
  man-pages-2.70.ebuild:
  Add TODO to dodoc while dropping HOWTOHELP #201609 by Arfrever Frehtes
  Taifersar Arahesis.

*man-pages-2.70 (06 Dec 2007)

  06 Dec 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.70.ebuild:
  Version bump.

*man-pages-2.69 (04 Dec 2007)

  04 Dec 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.69.ebuild:
  Version bump.

*man-pages-2.68 (28 Nov 2007)

  28 Nov 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.68.ebuild:
  Version bump.

*man-pages-2.67 (23 Oct 2007)

  23 Oct 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.67.ebuild:
  Version bump.

*man-pages-2.66 (08 Oct 2007)

  08 Oct 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.66.ebuild:
  Version bump.

*man-pages-2.65 (17 Sep 2007)

  17 Sep 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.65.ebuild:
  Version bump.

*man-pages-2.64 (12 Aug 2007)

  12 Aug 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.64.ebuild:
  Version bump.

*man-pages-2.63 (20 Jul 2007)

  20 Jul 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.63.ebuild:
  Version bump.

*man-pages-2.62 (13 Jul 2007)

  13 Jul 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.62.ebuild:
  Version bump.

*man-pages-2.61-r1 (08 Jul 2007)

  08 Jul 2007; Mike Frysinger <vapier@gentoo.org>
  +files/man-pages-2.61-DESTDIR.patch, +man-pages-2.61-r1.ebuild:
  Fix install path #184600.

*man-pages-2.61 (07 Jul 2007)
