@@ -4,7 +4,7 @@ DIST man-pages-2.70.tar.bz2 1857349 RMD160 9d1b4e98a1a33a50b1594d3970753c6b2fe39
 DIST man-pages-2.75.tar.bz2 1858490 RMD160 d7f6597d9f634866b64f65bddd81d9b9370950f7 SHA1 710e0ac135ae8f089279b2542ce1a7146df610d0 SHA256 3ad4b3da664b0f1d01465778c52b26bc46eb3aa2a5895053013f3ba88531cf94
 DIST man-pages-2.76.tar.bz2 1859368 RMD160 c6485b9aa5f619271966c32a7a0ecc48ab1407cf SHA1 e96b269f49210f9d0707d3d2d388b410c8344e37 SHA256 913bcf47c5d79255c244e9c83494c1035f3fa93b212e34832482b0a5120c4d22
 EBUILD man-pages-2.70.ebuild 1453 RMD160 04862d97566881f0e63f1ac2a05284e340eb95b1 SHA1 ea0505731913b155e6e3cd6891935961590c98de SHA256 8c233d2b6025e27904c9ffbec1fdb0eb870393b44b50667cf029d31ebdb4b352
-EBUILD man-pages-2.75.ebuild 1453 RMD160 55f998a5262dc045e5739e0c4a373e2ad41829ab SHA1 a4de51e20d82b4356ac16da8a4f734083a507581 SHA256 049e3ac369dbb1b6438afaa2562cd26c871174034aa270dd1386f8473eb7bb1a
-EBUILD man-pages-2.76.ebuild 1453 RMD160 19642eb4fcebda4084d906b89fc880c3eb996b3f SHA1 df6efe27344c24f554837f35d1a1ca306480496c SHA256 dc12c6c7cf4baefabe19e2e006d823c428498e65bed5b6a8cc00ac6186f02763
-MISC ChangeLog 12946 RMD160 91ea2272b1407bb8de7bf96c01b654621d5d4b08 SHA1 13d6c70de5d0b69c2d7b60fc20545b642988bb1b SHA256 ee004da75a7da99cc4600787278c71b0f05e0bd8a9237fa46e16fab7437a1a4d
+EBUILD man-pages-2.75.ebuild 1448 RMD160 c545a43fda22fca90f3a8b02fe1a7b71b78c1ed0 SHA1 35cfdad85cba952d58d4f0c51ad4df59f185fedb SHA256 268e184fd92a2b509feca95e65bebbfd195b7fa7c6f1c252838b56e564e3efd2
+EBUILD man-pages-2.76.ebuild 1448 RMD160 9ea961120d1dd9d77c47b50bb26dd7787308e826 SHA1 c32ae890c54c94d72282177a72fc5b361a64dc87 SHA256 0f3dbdc313185964f750a43aa8e19e7cc90310a7b07c77441187ad2852b96d47
+MISC ChangeLog 13141 RMD160 c4cce0a623c679e99a32baa3fa99a8dfd64a6cf0 SHA1 798821bdc0374567ce3edb8df37804f1b52d3cc8 SHA256 64e509367872b0b2e165b4611432404aaac4cfe6afd19038727ad480f700baab
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
